remove gray background from captions fix an issue with dark mode on load

--- a/assets/styles/common/elements.scss
+++ b/assets/styles/common/elements.scss
@@ -405,9 +405,6 @@ $element-margin-bottom: 1.5em;
     margin-bottom: $element-margin-bottom;
 
     figure {
-      figcaption {
-        color: var(--color-primary);
-      }
       padding: 1rem;
     }
   }
@@ -419,16 +416,10 @@ $element-margin-bottom: 1.5em;
 
     figure {
       display: block;
-      background-color: var(--color-gray-100);
-      padding: 20px;
-      border-radius: 6px;
       margin: auto;
 
       figcaption {
-        margin-bottom: 8px;
         text-align: center;
-        margin-top: 8px;
-        color: black;
       }
 
       .embed-responsive {
@@ -605,19 +596,6 @@ html.dark {
     pre {
       color: var(--color-body-color-dark);
       background: var(--color-gray-900);
-    }
-
-    .caption-wrapper {
-      display: flex;
-      justify-content: center;
-
-      figure {
-        background-color: var(--color-gray-700);
-
-        figcaption {
-          color: white;
-        }
-      }
     }
   }
 }
